<resources>
    <string name="app_name">QATAR2022 Mundial para España</string>
    <string name="registrar">REGISTRAR RESULTADO</string>
    <string name="consultar">CONSULTAR RESULTADOS</string>
    <string name="seleccionar">SELECCIONAR</string>
    <string name="save">GUARDAR RESULTADO</string>
    <string name="limpiar">LIMPIAR DATOS</string>
    <string name="Introducir">Introducir resultado</string>
    <string name="hintFecha">Introduce la fecha dd/mm/yyyy hh:mi</string>
    <string name="hintfase">Introduce la fase: Fase grupos, Octavos, Cuartos, Semifinales, Tercer puesto, Final</string>
    <string name="hintequno">Selecciona el equipo 1</string>
    <string name="hintedos">Selecciona el equipo 2</string>
    <string name="hintgolesuno">Goles del equipo 1</string>
    <string name="hintgolesdos">Goles del equipo 2</string>
    <string name="guion">-</string>
    <string name="SelEq">Selección de equipo</string>
    <string name="arg">Argentina</string>
    <string name="ara">Arabia Saudi</string>
    <string name="ale">Alemania</string>
    <string name="cancel">CANCELAR</string>
    <string name="acept">ACEPTAR</string>
    <string name="hintEqSelec">Introduce el equipo seleccionado</string>
    <string name="consulta">Consulta resultado por país</string>
    <string name="intropais">Introduce el país</string>
    <string name="aus">Australia</string>
    <string name="bel">Bélgica</string>
    <string name="bras">Brasil</string>
    <string name="cam">Camerún</string>
    <string name="can">Canada</string>
    <string name="cor">Corea del Sur</string>
    <string name="cos">Costa Rica</string>
    <string name="cro">Croacia</string>
    <string name="din">Dinamarca</string>
    <string name="ecu">Ecuador</string>
    <string name="esp">España</string>
    <string name="usa">Estados Unidos</string>
    <string name="fra">Francia</string>
    <string name="gal">Gales</string>
    <string name="gha">Ghana</string>
    <string name="hol">Holanda</string>
    <string name="ing">Inglaterra</string>
    <string name="ira">Irán</string>
    <string name="jap">Japón</string>
    <string name="mar">Marruecos</string>
    <string name="mex">México</string>
    <string name="pol">Polonia</string>
    <string name="por">Portugal</string>
    <string name="qat">Qatar</string>
    <string name="sen">Senegal</string>
    <string name="ser">Serbia</string>
    <string name="sui">Suiza</string>
    <string name="tun">Túnez</string>
    <string name="uru">Uruguay</string>
    <string name="introfechavalida">Por favor, introduce una fecha válida</string>
    <string name="introfasevalida">Por favor, introduza una fase válida</string>
    <string name="introequipos">Por favor, introduzca dos equipos válidos</string>
    <string name="introgoles">Por favor, introduzca los goles del partido</string>
    <string name="todoOKJoseLuis">DATOS GUARDADOS CORRECTAMENTE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>