<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".ConsultaActivity">

    <TextView
        android:id="@+id/strIntroCons"
        style="@style/Estilo_default_escrito"
        android:layout_marginTop="18dp"
        android:text="@string/consulta" />
    <EditText
        android:id="@+id/etpaisacons"
        style="@style/Estilo_default_edits"
        android:layout_below="@+id/strIntroCons"
        android:layout_marginEnd="140dp"
        android:layout_marginTop="20dp"
        android:hint="@string/intropais" />

    <Button
        android:id="@+id/btnfiltrarPais"
        style="@style/Estilo_btn_select"
        android:layout_alignRight="@+id/etpaisacons"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/strIntroCons"
        android:text="@string/seleccionar" />

    <FrameLayout
        android:id="@+id/frame1"
        style="@style/Estilo_layouts_frag"
        android:layout_below="@+id/etpaisacons">

    </FrameLayout>
    <FrameLayout
        android:id="@+id/frame2"
        style="@style/Estilo_layouts_frag"
        android:layout_below="@+id/frame1">

    </FrameLayout>
    <FrameLayout
        android:id="@+id/frame3"
        style="@style/Estilo_layouts_frag"
        android:layout_below="@+id/frame2">

    </FrameLayout>
    <FrameLayout
        android:id="@+id/frame4"
        style="@style/Estilo_layouts_frag"
        android:layout_below="@+id/frame3">

    </FrameLayout>
    <FrameLayout
        android:id="@+id/frame5"
        style="@style/Estilo_layouts_frag"
        android:layout_below="@+id/frame4">

    </FrameLayout>
    <FrameLayout
        android:id="@+id/frame6"
        style="@style/Estilo_layouts_frag"
        android:layout_below="@+id/frame5">

    </FrameLayout>
    <FrameLayout
        android:id="@+id/frame7"
        style="@style/Estilo_layouts_frag"
        android:layout_below="@+id/frame6">

    </FrameLayout>

</RelativeLayout>